--- a/PROJECT-2/PROJECT-2/Base.lproj/Main.storyboard
+++ b/PROJECT-2/PROJECT-2/Base.lproj/Main.storyboard
@@ -265,7 +265,7 @@
             </objects>
             <point key="canvasLocation" x="722" y="1588"/>
         </scene>
-        <!--Chocolate-->
+        <!--Table View Controller-->
         <scene sceneID="M05-XH-gxT">
             <objects>
                 <tableViewController id="9us-yK-AR9" sceneMemberID="viewController">
@@ -371,7 +371,7 @@
                             <outlet property="delegate" destination="9us-yK-AR9" id="aaa-4N-b1P"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Chocolate" id="csE-WP-Bhy"/>
+                    <navigationItem key="navigationItem" id="csE-WP-Bhy"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DJF-08-7r2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -383,8 +383,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CeE-fn-ggk" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Trending" image="star.circle.fill" catalog="system" id="7ZT-Mr-2cC"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7H8-Mn-pNb">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="7H8-Mn-pNb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -399,7 +399,7 @@
         <!--Trending-->
         <scene sceneID="kKz-Av-J2S">
             <objects>
-                <tableViewController id="nNL-ii-o8C" sceneMemberID="viewController">
+                <tableViewController id="nNL-ii-o8C" customClass="TreindingVC" customModule="PROJECT_2" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="1He-Tf-1co">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -407,14 +407,39 @@
                         <sections>
                             <tableViewSection headerTitle="Best Sellers" id="9gh-x5-1ZV">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="fvY-ha-R7M" style="IBUITableViewCellStyleDefault" id="tTG-hh-0Tm">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="fvY-ha-R7M" imageView="aMC-zb-m6u" rowHeight="63" style="IBUITableViewCellStyleDefault" id="tTG-hh-0Tm">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="63"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tTG-hh-0Tm" id="5zv-Ew-ZlM">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Belgian Chocolate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fvY-ha-R7M">
+                                                    <rect key="frame" x="116" y="0.0" width="278" height="63"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="520px-Chocolate" id="aMC-zb-m6u">
+                                                    <rect key="frame" x="20" y="0.0" width="81" height="63"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="New Releases" id="NT2-cL-y46">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="tFu-n9-Xtb" style="IBUITableViewCellStyleDefault" id="fbN-cY-XC8">
+                                        <rect key="frame" x="0.0" y="174.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fbN-cY-XC8" id="cu0-WV-xSX">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="belgianChocolate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fvY-ha-R7M">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Protein Chocolate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tFu-n9-Xtb">
                                                     <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
@@ -424,24 +449,41 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                            <tableViewSection headerTitle="New Releases" id="NT2-cL-y46">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="tFu-n9-Xtb" style="IBUITableViewCellStyleDefault" id="fbN-cY-XC8">
-                                        <rect key="frame" x="0.0" y="155" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="8IJ-ba-rBR" style="IBUITableViewCellStyleDefault" id="JPp-5y-h8m">
+                                        <rect key="frame" x="0.0" y="218" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fbN-cY-XC8" id="cu0-WV-xSX">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JPp-5y-h8m" id="hbD-xR-782">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="proteinChocolate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tFu-n9-Xtb">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Protein Chocolate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8IJ-ba-rBR">
                                                     <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="3B0-sD-3Wm" imageView="ais-P7-R8p" style="IBUITableViewCellStyleDefault" id="LF6-um-5DE">
+                                        <rect key="frame" x="0.0" y="261.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LF6-um-5DE" id="B4B-1N-V2O">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Protein Chocolate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3B0-sD-3Wm">
+                                                    <rect key="frame" x="127" y="0.0" width="267" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="images-2" id="ais-P7-R8p">
+                                                    <rect key="frame" x="20" y="0.0" width="92" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -453,11 +495,11 @@
                             <outlet property="delegate" destination="nNL-ii-o8C" id="o7G-SD-EZr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Trending" id="RRO-c9-c6Z"/>
+                    <navigationItem key="navigationItem" title="Trending" largeTitleDisplayMode="always" id="RRO-c9-c6Z"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lDZ-Sh-CwB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1626" y="2425"/>
+            <point key="canvasLocation" x="1624.6376811594205" y="2424.7767857142858"/>
         </scene>
     </scenes>
     <resources>
@@ -466,6 +508,7 @@
         <image name="Unknown-1" width="174" height="290"/>
         <image name="folder.circle.fill" catalog="system" width="128" height="121"/>
         <image name="images-1" width="299" height="168"/>
+        <image name="images-2" width="326" height="155"/>
         <image name="list.bullet" catalog="system" width="128" height="88"/>
         <image name="map" width="754" height="682"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
