--- a/DecAntique/DecAntique/View/Base.lproj/Main.storyboard
+++ b/DecAntique/DecAntique/View/Base.lproj/Main.storyboard
@@ -818,11 +818,11 @@
             </objects>
             <point key="canvasLocation" x="2394.202898550725" y="-480.13392857142856"/>
         </scene>
-        <!--Shopping Cart-->
+        <!--Favorite-->
         <scene sceneID="nXW-7g-oeL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dbx-gq-wlN" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Shopping Cart" image="cart" catalog="system" id="LWM-ZE-Jma"/>
+                    <tabBarItem key="tabBarItem" title="Favorite" image="heart" catalog="system" id="LWM-ZE-Jma"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="L8i-MD-kgc">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -1295,9 +1295,9 @@
     <resources>
         <image name="BackGroundDarkMode" width="564" height="845"/>
         <image name="Logo" width="614" height="376"/>
-        <image name="cart" catalog="system" width="128" height="102"/>
         <image name="checked" width="64" height="64"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="person.2" catalog="system" width="128" height="81"/>
         <image name="placeholder" width="300" height="300"/>
